...
            'Error al enviar calificación de verificación para arrendatario: $e');
      }

      if (mounted) {
        ScaffoldMessenger.of(context).showSnackBar(
          const SnackBar(
            content: Text('Perfil completado exitosamente'),
            backgroundColor: Colors.green,
          ),
        );
        context.pop();
      }
    }
...
